--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>welcome</h1>
 <p>rajalakshmi enginerring college</p>
 <p>this is day 2 workshop</p>
+<h2>git is a version control</h2>
+<p>this workshop is about full stack webdevelopement course</p>
