--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>this is day 2 workshop</p>
 <h2>git is a version control</h2>
 <p>this workshop is about full stack webdevelopement course</p>
+<h4>good afternoon</h4>
